--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@
 }
 
 #search-btn {
-    background-image: url("./assets/magnify.svg");
+    background-image: url("../assets/magnify.svg");
     width: 20px;
     height: 20px;
     background-color: white;
@@ -52,12 +52,12 @@
     column-gap: 10px;
 }
 
-.marker {
+.mark {
     justify-self: end;
     align-items: end;
 }
 
-#time-marker, .day {
+#time-marks, .day {
     display: contents;
 }
 
@@ -69,6 +69,6 @@
     background-color: blue;
 }
 
-#not-sure-yet {
+#others {
     background-color: red;
 }
