--- a/src/styles.css
+++ b/src/styles.css
@@ -63,6 +63,26 @@
 
 .chunk {
     outline: .2px dashed black;
+    
+    position: relative;
+    overflow: visible; /* Allows overflow in any direction */
+}
+
+.meal-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 95%; /* Restricts horizontal overflow */
+    height: auto;
+
+    background: #000;
+    color: white;
+    
+    padding: 4px;
+    border-radius: 4px; 
+    box-sizing: border-box; /* Width includes padding, border and content */
+    z-index: 2;
 }
 
 .day {
@@ -71,8 +91,4 @@
 
 #others {
     background-color: red;
-}
-
-.chunk > div {
-    height: 100%;
 }
