--- a/src/styles.css
+++ b/src/styles.css
@@ -28,14 +28,24 @@
 }
 
 #search-bar {
+    /* Remove default Safari styling */
+    -webkit-appearance: none;
+    appearance: none;
+
     flex: 1;
+
+    box-sizing: border-box;
+    padding: .2rem .7rem;
+    border-radius: 10px;
+
 }
 
 #search-btn {
     background-image: url("../assets/magnify.svg");
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: white;
+    border-radius: 30px;
 }
 
 #calendar-label {
