--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #E6D8C3;
+    color: black;
+}
+
 #main-container {
     height: 90vh;
     width: 90vw;
@@ -15,7 +20,6 @@
 }
 
 #search-container {
-    background-color: red;
 }
 
 #search-form {
@@ -38,23 +42,21 @@
     padding: .2rem .7rem;
     border-radius: 10px;
 
+    background-color: #F5F5F0;
 }
 
 #search-btn {
     background-image: url("../assets/magnify.svg");
-    width: 25px;
-    height: 25px;
-    background-color: white;
-    border-radius: 30px;
+    width: 27px;
+    height: 27px;
+    background-color: #F5F5F0;
+    border-radius: 25px;
 }
 
 #calendar-label {
-    background-color: red;
 }
 
 #calendar {
-    background-color: red;
-
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 1fr repeat(7, 3fr);
@@ -73,6 +75,7 @@
 
 .chunk {
     outline: .2px dashed black;
+    border-radius: 4px;
     
     position: relative;
     overflow: visible; /* Allows overflow in any direction */
@@ -86,10 +89,10 @@
     width: 95%; /* Restricts horizontal overflow */
     height: auto;
 
-    background: #000;
-    color: white;
+    background: #5D866C;
+    color: white; /* Maybe black */
     
-    padding: 4px;
+    padding: 5px;
     border-radius: 4px; 
     box-sizing: border-box; /* Width includes padding, border and content */
     z-index: 2;
@@ -100,5 +103,4 @@
 }
 
 #others {
-    background-color: red;
 }
