--- a/src/styles.css
+++ b/src/styles.css
@@ -96,7 +96,7 @@ body {
     height: auto;
 
     background: #5D866C; /* Maybe a deeper green */
-    color: white; /* Maybe black */
+    color: #E6D8C3; /* Maybe black */
     
     padding: 5px;
     border-radius: 4px; 
